force-app/main/default/objects/Training_Plan_Line__c/Training_Plan_Line__c.object-meta.xml
<CustomObject>
    <label>Training Plan Line</label>
    <nameField>
        <displayFormat>TPL-{00000000}</displayFormat>
        <label>Training Plan Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>