force-app/main/default/objects/Training_Plan_Line__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <label>Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Audience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>