force-app/main/default/objects/Training_Plan_Line__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Training Plan Lines</relationshipLabel>
    <relationshipName>Training_Plan_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>