force-app/main/default/objects/Training_Plan_Line__c/fields/Publication_Setting__c.field-meta.xml
<CustomField>
    <fullName>Publication_Setting__c</fullName>
    <label>Publication Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publication_Setting</valueSetName>
    </valueSet>
</CustomField>